samples/_failures_safe/1761295337_2efde5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef15e996.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_ef15e996.c:153:60: error: expected ‘)’ at end of input
  153 |         printf("Token %zu: %s -> '%s'\n", i, type_str, list
      |               ~                                            ^
      |                                                            )
./samples/SAFE/__tmp_ef15e996.c:153:9: error: expected declaration or statement at end of input
  153 |         printf("Token %zu: %s -> '%s'\n", i, type_str, list
      |         ^~~~~~
./samples/SAFE/__tmp_ef15e996.c:153:9: error: expected declaration or statement at end of input
